# sahara-image-elements

./: .gitignore  .gitreview  .mailmap  .zuul.yaml  AUTHORS  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.rst  lower-constraints.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
diskimage-create/: Create_CentOS_cloud_image.rst  README.rst  diskimage-create.sh
elements/: README.rst
elements/ambari/: README.rst  element-deps  package-installs.yaml  pkg-map
elements/apt-mirror/: README.md  README.rst
elements/centos-mirror/: README.md  README.rst
elements/disable-firewall/: README.md  README.rst  package-installs.yaml
elements/extjs/: README.rst  package-installs.yaml
elements/fedora-mirror/: README.rst
elements/hadoop/: README.md  README.rst  element-deps  package-installs.yaml  pkg-map
elements/hadoop-cdh/: README.md  README.rst  element-deps  package-installs.yaml
elements/hadoop-cloudera/: README.rst  element-deps  package-installs.yaml
elements/hadoop-hdp/: README.md  README.rst  element-deps  package-installs.yaml  source-repository-ambari-updates  source-repository-hadoopswift  source-repository-hdputils
elements/hadoop-idh/: README.md
elements/hadoop-mapr/: README.rst  element-deps  package-installs.yaml
elements/hadoop_fedora/: README.md
elements/hdp-local-mirror/: README.rst  element-deps  package-installs.yaml  pkg-map  source-repository-hdp-stack  source-repository-hdp-utils
elements/hive/: README.rst  element-deps  package-installs.yaml
elements/java/: README.md  README.rst
elements/kdc/: README.rst  package-installs.yaml  pkg-map
elements/mysql/: README.md  README.rst  package-installs.yaml  pkg-map
elements/nc/: README.rst  package-installs.yaml  pkg-map
elements/nfs-shares/: README.rst  package-installs.yaml  pkg-map
elements/ntp/: README.rst  package-installs.yaml
elements/oozie/: README.md  README.rst  element-deps  package-installs.yaml
hadoop-swift/: README.rst
tools/: run_bashate.sh
(+175 files in other folders)
