[metadata]
name = sahara-image-elements
version = 2015.1
summary = Image elements for Sahara
description-file = README.rst
license = Apache Software License
classifiers =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/developer/sahara

[files]
data_files =
    share/sahara-elements = elements/*

[wheel]
universal = 1
