[metadata]
name = sahara-image-elements
summary = Image elements for Sahara
description_file = README.rst
license = Apache Software License
python_requires = >=3.6
classifiers =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/sahara/latest

[files]
scripts =
    bin/sahara-image-create
    diskimage-create/diskimage-create.sh

data_files =
    share/sahara-elements/elements = elements/*
